# axvisor

./: .gitignore  Cargo.toml  README.md  README_CN.md
.cargo/: config.toml
.github/: axci-test-target-rules.json
.github/workflows/: test-axci-pilot.yml  test-board.yml  test-qemu.yml  test.yml
configs/vms/: nimbos-x86_64-qemu-smp1.toml
doc/: axci-integration.md  ci-testing.md
modules/axruntime/: Cargo.toml
scripts/ci/: analyze_ci_results.py  regression-cases.tsv  run_ci_suite.sh
src/: logo.rs  task.rs
src/driver/blk/: phytium.rs
src/hal/arch/aarch64/: mod.rs
xtask/src/: main.rs
