[workspace]
exclude = [
  "modules/axvisor_api",
  "arceos",
]
members = [
  "crates/*",
  "modules/*",
  "platform/*",
  "xtask",
  "kernel",
]
resolver = "3"

[profile.release]
lto = true

[workspace.package]

authors = ["Keyang Hu <keyang.hu@qq.com>", "周睿 <zrufo747@outlook.com>"]
edition = "2024"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPubL-2.0 OR MulanPSL2"
version = "0.3.0"

[workspace.dependencies]
bitflags = "2.2"
cfg-if = "1.0"
cpumask = "0.1.0"
kernel_guard = "0.1"
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1"
toml = "0.9"
ranges-ext = "0.3"
vm-allocator = {git = "https://github.com/rust-vmm/vm-allocator.git", ref = "c66cfac", default-features = false}

# System dependent modules provided by ArceOS.
# FIXME: pin to a specific tag!
axstd = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216", features = [
  "alloc-level-1",
  "paging",
  "irq",
  "multitask",
  "task-ext",
  "alloc",
  "myplat",
  "smp", # "page-alloc-64g",
]}

axalloc = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axconfig = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axdisplay = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axdriver = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axhal = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axipi = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axlog = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axmm = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axnet = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}
axtask = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251216"}

axcpu = {git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03"}
axplat = {git = "https://github.com/arceos-org/axplat_crates.git", tag = "dev-v03"}

# System dependent modules provided by ArceOS-Hypervisor.
axaddrspace = "0.2"
axhvc = {git = "https://github.com/arceos-hypervisor/axhvc.git"}
axklib = {git = "https://github.com/arceos-hypervisor/axklib.git"}
axruntime = {path = "modules/axruntime"}
axfs = {path = "modules/axfs"}
axvcpu = "0.1"
axvm = {path = "modules/axvm"}

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno = "0.2"
byte-unit = {version = "5", default-features = false, features = ["byte"]}
crate_interface = "0.1"
fdt-parser = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5", features = ["arm-el2"]}
page_table_multiarch = "0.5"
rdif-intc = "0.12"
rdrive = "0.18"

axdevice = {git = "https://github.com/arceos-hypervisor/axdevice.git"}
axdevice_base = "0.1"
axplat-aarch64-dyn = {path = "platform/axplat-aarch64-dyn", features = ["irq", "smp", "hv"]}
axvisor_api = "0.1"
axvm-types = {path = "modules/axvm-types"}
driver = {path = "modules/driver"}

# platform
axplat-x86-qemu-q35 = {path = "platform/x86-qemu-q35"}
axvmconfig = {version = "0.1", default-features = false}

[patch.crates-io]
arm_vcpu = {path = "modules/arm_vcpu"}
arm_vgic = {path = "modules/arm_vgic"}
axaddrspace = {path = "modules/axaddrspace"}
axdevice_base = {path = "modules/axdevice_base"}
axvcpu = {path = "modules/axvcpu"}
axvisor_api = {path = "modules/axvisor_api"}
axvmconfig = {path = "modules/axvmconfig"}
x86_vcpu = {path = "modules/x86_vcpu"}
x86_vlapic = {path = "modules/x86_vlapic"}

[patch."https://github.com/arceos-hypervisor/axdevice".axdevice]
path = "modules/axdevice"

[patch."https://github.com/arceos-org/arceos"]
# axalloc = {path = "modules/axalloc"}
axconfig = {path = "modules/axconfig"}
axruntime = {path = "modules/axruntime"}
axfs = {path = "modules/axfs"}
